--- a/Resources/Prototypes/Imperial/ErtCall/ErtCallPresets.yml
+++ b/Resources/Prototypes/Imperial/ErtCall/ErtCallPresets.yml
@@ -1,20 +1,20 @@
 - type: ertCall
-  id: ERT-Small
+  id: Standart-ERT-Small
   path: "Maps/Shuttles/ERTPresets/dartERTSmall.yml"
   desc: "1 лидер, 3 бойца, 1 инж, 1 мед"
 
 - type: ertCall
-  id: ERT-Medium
+  id: Standart-ERT-Medium
   path: "Maps/Shuttles/ERTPresets/dartERTMedium.yml"
   desc: "1 лидер, 6 бойцов, 1 инж, 1 мед"
 
 - type: ertCall
-  id: ERT-BIG
+  id: Standart-ERT-BIG
   path: "Maps/Shuttles/ERTPresets/dartERTBig.yml"
   desc: "1 Лидер, 12 бойцов, 2 инж, 2 мед, 1 уборщик"
 
 - type: ertCall
-  id: CBURN
+  id: Standart-CBURN
   path: "Maps/Shuttles/ERTPresets/dartCBURN.yml"
   desc: "1 лидер, 6 бойцов, 1 мед"
 
@@ -28,8 +28,19 @@
   path: "Maps/Shuttles/ERTPresets/junitorERT.yml"
   desc: "1 лидер, 4 уборщика"
 
+- type: ertCall
+  id: ERT-Small
+  path: "Maps/Shuttles/ERTPresets/newERTSmall.yml"
+  desc: "1 лидер, 3 бойца, 1 медик, 1 инженер"
 
+- type: ertCall
+  id: ERT-Big
+  path: "Maps/Shuttles/ERTPresets/newERTBig.yml"
+  desc: "1 лидер, 12 бойцов, 2 медика, 2 инженера, 2 уборщика"
 
-
+- type: ertCall
+  id: ERT-Clining
+  path: "Maps/Shuttles/ERTPresets/cliningERT.yml"
+  desc: "1 лидер, 4 уборщика, дорогой шаттл"
 
 
