Перенос ПР'ов №76 и 78 на апстрим (#79)
* Добавление новых игрушек

* Респрайт мантий

* Респрайт СБ и боевых бутсов

* Добавление водолазки и юбки-водолазки капитана

--- a/Resources/Prototypes/Catalog/Fills/Lockers/heads.yml
+++ b/Resources/Prototypes/Catalog/Fills/Lockers/heads.yml
@@ -47,6 +47,8 @@
       - id: MedalCase
       - id: ControlModsuitMagnate #Edited in Imperial Space by @sentryprimies in the name of modsuits
       - id: ClothingHeadHatCapcap
+      - id: ClothingUniformJumpsuitCaptainAlt #ImperialClothes Водолазки капитана
+      - id: ClothingUniformJumpskirtCaptainAlt #ImperialClothes Водолазки капитана
 
 - type: entity
   id: LockerCaptainFilled
@@ -75,6 +77,8 @@
       - id: MedalCase
       - id: ClothingHeadHatCapcap
       - id: ControlModsuitMagnate #Edited in Imperial Space by @sentryprimies in the name of modsuits
+      - id: ClothingUniformJumpsuitCaptainAlt #ImperialClothes Водолазки капитана
+      - id: ClothingUniformJumpskirtCaptainAlt #ImperialClothes Водолазки капитана
 
 - type: entity
   id: LockerCaptainFilledNoLaser
