fix non abstract base prototype

--- a/Resources/Prototypes/Imperial/HephaestusStation/minuteman/innerclothing.yml
+++ b/Resources/Prototypes/Imperial/HephaestusStation/minuteman/innerclothing.yml
@@ -3,6 +3,7 @@
   id: ClothingUniformJumpsuitMinuteManBase
   name: filler
   nospawn: true
+  abstract: true
   components:
   - type: TemperatureProtection
     coefficient: 0.4 #cave survival
