--- a/Resources/Prototypes/Imperial/Toughguys/plushie_EasterEgg.yml
+++ b/Resources/Prototypes/Imperial/Toughguys/plushie_EasterEgg.yml
@@ -5,7 +5,7 @@
   components:
   - type: Sprite
     sprite: Objects/Specific/Chemistry/pills.rsi
-    state: pill11
+    state: pill7
   - type: Pill
     pillType: 10
   - type: SolutionContainerManager
@@ -18,11 +18,78 @@
   - type: StaticPrice
     price: 100
 
+- type: reagent
+  id: ArmenianStuff
+  name: reagent-name-armenianStuff
+  desc: reagent-desc-armenianStuff
+  group: Narcotic
+  physicalDesc: reagent-physical-desc-armenianStuff
+  flavor: ambrosia
+  color: "#C93A3A"
+  boilingPoint: 331.0
+  meltingPoint: 162.0
+  metabolisms:
+    Poison:
+      effects:
+      - !type:HealthChange
+        damage:
+          types:
+            Poison: 0.5
+      - !type:HealthChange
+        conditions:
+        - !type:ReagentThreshold
+          min: 30
+        damage:
+          types:
+            Poison: 2
+            Asphyxiation: 2
+    Narcotic:
+      effects:
+      - !type:MovespeedModifier
+        walkSpeedModifier: 1.45
+        sprintSpeedModifier: 1.45
+      - !type:GenericStatusEffect
+        key: Stutter
+        component: StutteringAccent
+      - !type:Jitter
+      - !type:GenericStatusEffect
+        key: Stun
+        time: 4
+        type: Remove
+      - !type:GenericStatusEffect
+        key: KnockedDown
+        time: 4
+        type: Remove
+      - !type:HealPsychosis # psychosis
+        reagent: THK
+        stage: 2
+        conditions: # psychosis
+        - !type:ReagentThreshold # psychosis
+          min: 10 # psychosis
+      - !type:GenericStatusEffect
+        key: SeeingRainbows
+        component: SeeingRainbows
+        type: Add
+        time: 5
+        refresh: false
+      - !type:GenericStatusEffect
+        key: Muted
+        component: Muted
+        type: Add
+        time: 5
+        refresh: false
+    Medicine:
+      effects:
+      - !type:ResetNarcolepsy
+        conditions:
+        - !type:ReagentThreshold
+          min: 20
+
 - type: entity
+  id: ArmenianStuffBottle
+  parent: BaseChemistryEmptyBottle
   name: Armenian Stuff
   description: Kum'Ar's secret recipe, adapted by the Fox God.
-  parent: BaseChemistryEmptyBottle
-  id: ArmenianStuff
   components:
   - type: Sprite
     layers:
@@ -35,12 +102,8 @@
       drink:
         maxVol: 60
         reagents:
-          - ReagentId: Desoxyephedrine
-            Quantity: 30
-          - ReagentId: THCOil
-            Quantity: 10
-          - ReagentId: MuteToxin
-            Quantity: 20
+          - ReagentId: ArmenianStuff
+            Quantity: 60
   - type: SolutionContainerVisuals
     maxFillLevels: 6
     fillBaseName: bottle-2-
