ну точно финальный гейминг

--- a/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
@@ -714,6 +714,7 @@
       - Signaller
       - SignalTrigger
       - TelescopicShield
+      - TelescopicBaton #Imperial 
       - TimerTrigger
       - Truncheon
       - VoiceTrigger
