--- a/Resources/Prototypes/Catalog/Fills/Backpacks/StarterGear/backpack.yml
+++ b/Resources/Prototypes/Catalog/Fills/Backpacks/StarterGear/backpack.yml
@@ -69,7 +69,8 @@
       - id: BoxSurvival
       - id: Flash
       #- name: StationCharter
-      #- name: TelescopicBaton
+      - id: Telebaton
+
 - type: entity
   noSpawn: true
   parent: ClothingBackpackEngineering
@@ -79,7 +80,7 @@
     contents:
       - id: BoxSurvivalEngineering
       - id: Flash
-      #- id: TelescopicBaton
+      - id: Telebaton
 
 - type: entity
   noSpawn: true
@@ -90,7 +91,7 @@
     contents:
       - id: BoxSurvival
       - id: Flash
-      #- id: TelescopicBaton
+      - id: Telebaton
 
 - type: entity
   noSpawn: true
@@ -101,7 +102,7 @@
     contents:
       - id: BoxSurvival
       - id: Flash
-      #- id: TelescopicBaton
+      - id: Telebaton
 
 - type: entity
   noSpawn: true
@@ -112,7 +113,7 @@
     contents:
       - id: BoxSurvivalMedical
       - id: Flash
-      #- id: TelescopicBaton
+      - id: Telebaton
 
 - type: entity
   noSpawn: true
@@ -123,7 +124,7 @@
     contents:
       - id: BoxSurvival
       - id: Flash
-      #- id: TelescopicBaton
+      - id: Telebaton
 
 - type: entity
   noSpawn: true
