Фикс покупки новых игрушек (#94)

--- a/Resources/Prototypes/Imperial/Toughguys/funcrate.yml
+++ b/Resources/Prototypes/Imperial/Toughguys/funcrate.yml
@@ -20,6 +20,9 @@
       - id: PlushieSurgeon
       - id: PlushieBarmem
       - id: PlushieCoroner
+      - id: PlushieHOP
+      - id: PlushieNuclearmedic
+      - id: PlushiePassenger
 
 - type: cargoProduct
   id: FunPlushieCommunity
