Fix Armenian Stuff 's id. (#96)

--- a/Resources/Prototypes/Imperial/Toughguys/plushie_prototypes.yml
+++ b/Resources/Prototypes/Imperial/Toughguys/plushie_prototypes.yml
@@ -117,7 +117,7 @@
   components:
   - type: StorageFill
     contents:
-      - id: ArmenianStuffBottle
+      - id: ArmenianStuff
 
 - type: entity
   parent: BasePlushieCharacter
