--- a/Resources/Prototypes/Roles/Jobs/Security/brigmedic.yml
+++ b/Resources/Prototypes/Roles/Jobs/Security/brigmedic.yml
@@ -39,6 +39,7 @@
     ears: ClothingHeadsetBrigmedic
     mask: ClothingMaskRebreatherBrigmedic
     belt: ClothingBeltMilitaryWebbingBrigmedFilled
+    pocket1: Telebaton
   innerclothingskirt: ClothingUniformJumpskirtBrigmedicNew
   satchel: ClothingBackpackSatchelBrigmedicFilled
   duffelbag: ClothingBackpackDuffelBrigmedicFilled
