Добавление плащей и рюкзаков! (#98)

--- a/Resources/Prototypes/Imperial/CapDrobe/CapDrobeInventory.yml
+++ b/Resources/Prototypes/Imperial/CapDrobe/CapDrobeInventory.yml
@@ -7,8 +7,12 @@
     ClothingHeadHatBeretCaptainWhite: 1
     ClothingHeadHatCapcapWhite: 1
     ClothingHandsGlovesCaptainWhite: 1
+    Capwhitecloack: 1
+    Capwhitebackpack: 1
     ClothingUniformJumpsuitSheriffCaptain: 1
     ClothingBeltSheriffSheath: 1
     ClothingHeadHatBeretCaptainSheriff: 1
     ClothingHeadHatCapcapSheriff: 1
     ClothingHandsGlovesCaptainSheriff: 1
+    CapSheriffcloack: 1
+    CapSheriffbackpack: 1
