Добавление мантии смотрителя и респрайт комбеза ГВ (#103)
* Исправление милитари стиля водолазки ГВ

* Мантия смотрителя
# Conflicts:
#	Resources/Prototypes/Entities/Structures/Machines/lathe.yml

--- a/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
@@ -1018,6 +1018,7 @@
       - ClothingUniformJumpsuitCoroner #Imperial coroner
       - ClothingUniformJumpskirtCoroner #Imperial coroner
       - ClothingNeckCloakNanotrasenBlack #Imperial black cloak
+      - WardenMantleLathe #ImperialClothes Мантия смотрителя
   - type: EmagLatheRecipes
     emagStaticRecipes:
       - ClothingHeadHatCentcomcap
