--- a/Resources/Prototypes/Imperial/ImperialClothes/ImperialCloak.yml
+++ b/Resources/Prototypes/Imperial/ImperialClothes/ImperialCloak.yml
@@ -15,3 +15,22 @@
   components:
   - type: Sprite
     sprite: Imperial/ImperialClothes/hoscloakformal.rsi
+
+- type: entity
+  parent: ClothingNeckBase
+  id: WardenMantleID
+  name: WardenMantle
+  description: The prisoners should be afraid of you!
+  components:
+  - type: Sprite
+    sprite: Imperial/ImperialClothes/wardenmantle.rsi
+  - type: Clothing
+    sprite: Imperial/ImperialClothes/wardenmantle.rsi
+
+- type: latheRecipe # ImperialClothes Мантия вардена. Добавлена нашими спрайтерами
+  id: WardenMantleLathe
+  result: WardenMantleID
+  completetime: 2.8
+  materials:
+    Cloth: 150
+    Durathread: 150
