--- a/Resources/Maps/Shuttles/ERTPresets/predationERTBig.yml
+++ b/Resources/Maps/Shuttles/ERTPresets/predationERTBig.yml
@@ -32,7 +32,7 @@ entities:
   entities:
   - uid: 1
     components:
-    - name: grid
+    - name: NT41 ERT-6141SQ "Стальной Огонь"
       type: MetaData
     - pos: -0.59375,-0.515625
       parent: invalid
@@ -1369,6 +1369,7 @@ entities:
       type: GridAtmosphere
     - type: GasTileOverlay
     - type: RadiationGridResistance
+    - type: ShuttleName
 - proto: AirAlarm
   entities:
   - uid: 2
@@ -1748,6 +1749,23 @@ entities:
     - pos: 2.5,20.5
       parent: 1
       type: Transform
+  - uid: 1363
+    components:
+    - pos: -0.5,-8.5
+      parent: 1
+      type: Transform
+  - uid: 1365
+    components:
+    - rot: -1.5707963267948966 rad
+      pos: 2.5,-6.5
+      parent: 1
+      type: Transform
+  - uid: 1367
+    components:
+    - rot: 3.141592653589793 rad
+      pos: 2.5,13.5
+      parent: 1
+      type: Transform
 - proto: AtmosDeviceFanTiny
   entities:
   - uid: 48
@@ -1778,6 +1796,30 @@ entities:
   - uid: 53
     components:
     - pos: 9.5,1.5
+      parent: 1
+      type: Transform
+- proto: AtmosFixNitrogenMarker
+  entities:
+  - uid: 1369
+    components:
+    - pos: 6.5,-22.5
+      parent: 1
+      type: Transform
+  - uid: 1370
+    components:
+    - pos: 5.5,-22.5
+      parent: 1
+      type: Transform
+- proto: AtmosFixOxygenMarker
+  entities:
+  - uid: 1371
+    components:
+    - pos: 5.5,-24.5
+      parent: 1
+      type: Transform
+  - uid: 1372
+    components:
+    - pos: 6.5,-24.5
       parent: 1
       type: Transform
 - proto: BannerMedical
@@ -2913,6 +2955,21 @@ entities:
   - uid: 268
     components:
     - pos: 2.5,16.5
+      parent: 1
+      type: Transform
+  - uid: 1364
+    components:
+    - pos: -0.5,-8.5
+      parent: 1
+      type: Transform
+  - uid: 1366
+    components:
+    - pos: 2.5,-6.5
+      parent: 1
+      type: Transform
+  - uid: 1368
+    components:
+    - pos: 2.5,13.5
       parent: 1
       type: Transform
 - proto: CableHV
