--- a/Resources/Prototypes/Imperial/TFG/Weapon/M2108.yml
+++ b/Resources/Prototypes/Imperial/TFG/Weapon/M2108.yml
@@ -55,7 +55,9 @@
   description:
   components:
   - type: Sprite
-    state: black
+    layers:
+    - state: black
+    - state: sign_imperial
   - type: StorageFill
     contents:
     - id: WeaponPistolM2108Award
