[Апстрим] Респрайт Карго (#105)
* cargo resprite

* fixes

* Эпоха Геймеров

* Решает проблемы гейминга

* 2пжз22222

--- a/Resources/Prototypes/Imperial/TFG/Representative/Suits.yml
+++ b/Resources/Prototypes/Imperial/TFG/Representative/Suits.yml
@@ -190,7 +190,7 @@
     - HamsterWearable
     - WhitelistChameleon
     - ClothMade
-  - type: ItemCooldown
+  ##- type: ItemCooldown
   - type: MeleeWeapon
     damage:
       types:
@@ -201,7 +201,7 @@
       - Prying
     useSound:
       path: /Audio/Items/crowbar.ogg
-  - type: TilePrying
+ # - type: TilePrying
   - type: StaticPrice
     price: 499
   - type: Prying
