[Upstream] [Non-Modular] Респрайт карго: Обновление куртки (#114)
* быстро отфиксовывает куртку

* куртка в каргомате

--- a/Resources/Prototypes/Catalog/VendingMachines/Inventories/cargodrobe.yml
+++ b/Resources/Prototypes/Catalog/VendingMachines/Inventories/cargodrobe.yml
@@ -12,6 +12,7 @@
     ClothingHeadBandBrown: 3
     ClothingHeadsetCargo: 3
     ClothingOuterWinterCargo: 2
+    ClothingOuterArmorCargoJacket: 2 #Imperial edit
     ClothingOuterWinterMiner: 2
     ClothingNeckScarfStripedBrown: 3
     ClothingShoesBootsWinterCargo: 2
