--- a/Resources/Prototypes/Imperial/Sona/Katana/Katana.yml
+++ b/Resources/Prototypes/Imperial/Sona/Katana/Katana.yml
@@ -16,7 +16,7 @@
     soundHit:
         path: /Audio/Weapons/eblade1.ogg
   - type: Item
-    size: 15
+    size: Small
     sprite: Imperial/Sona/Katana.rsi
   - type: StaminaDamageOnHit
     damage: 15
