--- a/Resources/Prototypes/Imperial/TFG/Representative/ShuttleStuff.yml
+++ b/Resources/Prototypes/Imperial/TFG/Representative/ShuttleStuff.yml
@@ -99,7 +99,7 @@
       - state: box_command
       - state: nano_label
   - type: Item
-    size: 15
+    size: Small
   - type: Storage
     capacity: 15
   - type: StorageFill
