--- a/Resources/Prototypes/Entities/Objects/Weapons/Guns/Ammunition/Boxes/light_rifle.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Guns/Ammunition/Boxes/light_rifle.yml
@@ -105,7 +105,7 @@
     - state: incendiary
 
 - type: entity
-  parent: BaseMagazineBoxLightRifle
+  parentBaseMagazineBoxLightRifle:
   id: MagazineBoxLightRifleUranium
   name: ammunition box (.30 rifle uranium)
   components:
