--- a/Resources/Prototypes/Imperial/Community/community_posters.yml
+++ b/Resources/Prototypes/Imperial/Community/community_posters.yml
@@ -20,6 +20,7 @@
       - kamish_6
       - kamish_10
       - KEEYN_3
+      - KEEYN_7
       - Swebit_2
       - Willy_Bown_1
       - encrowmer_1
@@ -51,4 +52,6 @@
       - KEEYN_1
       - KEEYN_2
       - KEEYN_4
+      - KEEYN_5
+      - KEEYN_6
     chance: 1
