--- a/Resources/Prototypes/Entities/Structures/Doors/Airlocks/highsec.yml
+++ b/Resources/Prototypes/Entities/Structures/Doors/Airlocks/highsec.yml
@@ -57,6 +57,7 @@
   - type: Weldable
     time: 10
   - type: Airlock
+    openUnlitVisible: true #resprite
   - type: NavMapDoor
   - type: DoorBolt
   - type: AccessReader
